--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-art",
   "description": "React ART is a JavaScript library for drawing vector graphics using React. It provides declarative and reactive bindings to the ART library. Using the same declarative API you can render the output to either Canvas, SVG or VML (IE8).",
-  "version": "0.14.0",
+  "version": "0.14.1",
   "keywords": [
     "react",
     "art",
@@ -10,12 +10,12 @@
     "canvas",
     "jsx"
   ],
-  "bugs": "https://github.com/reactjs/react-art/issues",
+  "bugs": "https://github.com/chukcha-wtf/react-art/issues",
   "licenses": "BSD-3-Clause",
   "main": "lib/ReactART.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/reactjs/react-art.git"
+    "url": "https://github.com/chukcha-wtf/react-art.git"
   },
   "dependencies": {
     "art": "^0.10.0",
